QQmlComponent: Fix ordering of callbacks on loadFromModule()

We need to set any initial properties before we call
componentComplete() and we should assign a context to the object even if
it's loaded from a C++-based type. It can be the engine's root context
in that case.

Amends commit fa0be265e4c6a8528778a41fdd376b26cb70db74.

[ChangeLog][QtQml] The QQmlParserStatus callbacks are invoked on objects
loaded using QQmlComponent::loadFromModule() at appropriate times now.
You can rely on any initial properties having been set before
componentComplete() is called and you can rely on the object having a
valid QML context.

Fixes: QTBUG-130867
Change-Id: I3485a4305a583ce3cab7d83d8305503025004f44
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 595abf24a2c9d8a3679a2c6c4e941c0e301b8ea0)
(cherry picked from commit 3c162c592a815dd57405327888a2f27cc28ce498)
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>