src/qml/qml/qqmlcomponent.cpp
@@ -1033,6 +1033,14 @@ QObject *QQmlComponent::beginCreate(QQmlContext *context)
     return d->beginCreate(QQmlContextData::get(context));
 }
 
+static QQmlParserStatus *parserStatusCast(const QQmlType &type, QObject *rv)
+{
+    const int parserStatusCast = type.parserStatusCast();
+    return parserStatusCast == -1
+            ? nullptr
+            : reinterpret_cast<QQmlParserStatus *>(reinterpret_cast<char *>(rv) + parserStatusCast);
+}
+
 QObject *QQmlComponentPrivate::beginCreate(QQmlRefPointer<QQmlContextData> context)
 {
     Q_Q(QQmlComponent);
@@ -1091,7 +1099,7 @@ QObject *QQmlComponentPrivate::beginCreate(QQmlRefPointer<QQmlContextData> conte
     const QQmlType type = loadedType();
     if (!type.isValid()) {
         enginePriv->referenceScarceResources();
-        state.initCreator(std::move(context), compilationUnit, creationContext);
+        state.initCreator(context, compilationUnit, creationContext);
 
         QQmlObjectCreator::CreationFlags flags;
         if (const QString *icName = inlineComponentName.get()) {
@@ -1111,25 +1119,20 @@ QObject *QQmlComponentPrivate::beginCreate(QQmlRefPointer<QQmlContextData> conte
         // TODO: extract into function
         rv = type.createWithQQmlData();
         QQmlPropertyCache::ConstPtr propertyCache = QQmlData::ensurePropertyCache(rv);
-        QQmlParserStatus *parserStatus = nullptr;
-        const int parserStatusCast = type.parserStatusCast();
-        if (parserStatusCast != -1) {
-            parserStatus = reinterpret_cast<QQmlParserStatus*>(reinterpret_cast<char *>(rv) + parserStatusCast);
+        if (QQmlParserStatus *parserStatus = parserStatusCast(type, rv)) {
             parserStatus->classBegin();
+            state.ensureRequiredPropertyStorage(rv);
+        } else if (type.finalizerCast() != -1) {
+            state.ensureRequiredPropertyStorage(rv);
         }
+
         for (int i = 0, propertyCount = propertyCache->propertyCount(); i < propertyCount; ++i) {
             if (const QQmlPropertyData *propertyData = propertyCache->property(i); propertyData->isRequired()) {
-                state.ensureRequiredPropertyStorage();
+                state.ensureRequiredPropertyStorage(rv);
                 RequiredPropertyInfo info;
                 info.propertyName = propertyData->name(rv);
                 state.addPendingRequiredProperty(rv, propertyData, info);
             }
-        }
-        if (parserStatus)
-            parserStatus->componentComplete();
-        if (const int finalizerCast = type.finalizerCast(); finalizerCast != -1) {
-            auto* hook = reinterpret_cast<QQmlFinalizerHook *>(reinterpret_cast<char *>(rv) + finalizerCast);
-            hook->componentFinalized();
         }
     }
 
@@ -1141,6 +1144,12 @@ QObject *QQmlComponentPrivate::beginCreate(QQmlRefPointer<QQmlContextData> conte
         ddata->indestructible = true;
         ddata->explicitIndestructibleSet = true;
         ddata->rootObjectInCreation = false;
+
+        // Assign parent context to the object if we haven't created one.
+        if (!ddata->outerContext)
+            ddata->outerContext = context.data();
+        if (!ddata->context)
+            ddata->context = context.data();
     }
 
     return rv;
@@ -1277,7 +1286,19 @@ void QQmlComponentPrivate::completeCreate()
             state.errors.push_back(QQmlComponentPrivate::AnnotatedQmlError { error, true });
         }
     }
-    if (loadedType().isValid()) {
+
+    const QQmlType type = loadedType();
+    if (type.isValid()) {
+        QObject *rv = state.target();
+        if (QQmlParserStatus *parserStatus = parserStatusCast(type, rv))
+            parserStatus->componentComplete();
+
+        if (const int finalizerCast = type.finalizerCast(); finalizerCast != -1) {
+            auto *hook = reinterpret_cast<QQmlFinalizerHook *>(
+                    reinterpret_cast<char *>(rv) + finalizerCast);
+            hook->componentFinalized();
+        }
+
         /*
            We can directly set completePending to false, as finalize is only concerned
            with setting up pending bindings, but that cannot happen here, as we're
